# mkwallpaper

./: Makefile  README.md  meson.build  mkwalldemo.sh  mkwallpaper.c  mkwallpaper.h
.github/workflows/: c-cpp.yml
data/: meson.build  mkwalldemo.sh.1.scd  mkwallpaper.1.scd
demo/: README.md
